# oplexa-game

./: .env  .gitignore  Cargo.toml  README.md  server.settings.toml
.github/workflows/: release.yml
api/: Cargo.toml
api/src/: lib.rs
api/src/core/: config.rs  debug.rs  mod.rs  multiplayer.rs  ui.rs
api/src/core/commands/: mod.rs  mode.rs  registry.rs
api/src/core/entities/: mod.rs
api/src/core/entities/player/: block_selection.rs  inventory.rs  mod.rs
api/src/core/events/: chunk_events.rs  mod.rs  ui_events.rs
api/src/core/events/block/: block_player_events.rs  mod.rs
api/src/core/inventory/: creative_panel.rs  mod.rs
api/src/core/inventory/items/: mod.rs  registry.rs  types.rs  world_item.rs
api/src/core/inventory/items/tools/: helpers.rs  requirement.rs  tool.rs  tool_level.rs  tool_type.rs
api/src/core/inventory/recipe/: building.rs  hand_crafted.rs  loader.rs  mod.rs  registry.rs  state.rs  types.rs  work_table_crafting.rs
api/src/core/network/: config.rs  discovery.rs
api/src/core/network/protocols/: auth.rs  blocks.rs  chunks.rs  drops.rs  inventory.rs  mod.rs  players.rs
api/src/core/shader/: mod.rs  terrain_shader.rs  water_shader.rs
api/src/core/states/: states.rs  world_gen.rs
api/src/core/world/: block.rs  chunk.rs  chunk_dimension.rs  mod.rs  prop.rs  save.rs  spawn.rs
api/src/core/world/biome/: func.rs  mod.rs  registry.rs
api/src/generator/: mod.rs
api/src/generator/chunk/: cave_builder.rs  chunk_builder.rs  chunk_gen.rs  chunk_struct.rs  chunk_utils.rs  mod.rs  river_utils.rs  water_builder.rs  water_utils.rs
api/src/generator/chunk/base/: chunk_builder.rs  chunk_builder_tail.rs  chunk_gen.rs  chunk_struct.rs  chunk_utils.rs  mod.rs
api/src/generator/chunk/cave/: cave_builder.rs  cave_utils.rs  mod.rs
api/src/generator/chunk/fluid/: mod.rs  water_builder.rs  water_utils.rs
api/src/generator/chunk/trees/: mod.rs  registry.rs  tree_gen.rs
api/src/generator/chunk/vegetation/: prop_gen.rs
api/src/generator/shader/: mod.rs  water_shader.rs
api/src/handlers/inventory/: mod.rs
api/src/handlers/items/: world_item_handler.rs
api/src/handlers/recipe/: mod.rs
api/src/utils/: mod.rs  v_ram_utils.rs
apps/client/: Cargo.toml
apps/server/: Cargo.toml
assets/biomes/: deep_ocean.json  desert.json  desert_mountains.json  forest.json  mountains.json  ocean.json  plains.json  snow_plains.json  snowy_mountains.json
config/: gameplay.toml  graphics.toml  input.toml  interface.toml  multiplayer_servers.toml  network.toml
crates/core/: Cargo.toml
crates/core/src/: chat.rs  lib.rs
crates/core/src/commands/: parsed.rs  registry.rs  sender.rs
crates/core/src/events/: chunk_events.rs  mod.rs  ui_events.rs
crates/core/src/events/block/: mod.rs
crates/core/src/inventory/: mod.rs
crates/core/src/inventory/items/: mod.rs  registry.rs  world_item.rs
crates/core/src/inventory/items/tools/: mod.rs  tool_level.rs
crates/core/src/inventory/recipe/: building.rs  helpers.rs  loader.rs  mod.rs  work_table_crafting.rs
crates/core/src/world/: block.rs  chunk.rs  chunk_dimension.rs  fluid.rs  prop.rs  save.rs  spawn.rs
crates/core/src/world/biome/: func.rs
crates/game_client/: Cargo.toml
crates/game_client/src/: core_module.rs  integrated_server.rs  lib.rs  multiplayer.rs
crates/game_client/src/client/: bootstrap.rs  chunk_debug_grid.rs  manager.rs  mod.rs  mod_multiplayer_tail.rs  runtime.rs
crates/game_client/src/generator/: mod.rs
crates/game_client/src/generator/chunk/: mod.rs
crates/game_client/src/generator/chunk/runtime/: chunk_meshing.rs  chunk_meshing_tail.rs  chunk_runtime.rs  chunk_runtime_tail.rs  mod.rs
crates/game_client/src/graphic/: hardcoded_ui.rs  mod.rs
crates/game_client/src/graphic/components/: benchmark.rs  benchmark_auto.rs  chat.rs  chest.rs  debug_overlay.rs  hud.rs  inventory.rs  inventory_creative.rs  inventory_helpers.rs  language.rs  main_menu.rs  multiplayer.rs  pause_menu.rs  single_player.rs  spawn.rs  spawn_hardcoded_ui_panels.rs  structure_builder.rs  ui_interaction_sync.rs  workbench.rs  world_flow.rs
crates/game_client/src/handlers/inventory/: mod.rs
crates/game_client/src/handlers/items/: world_item_handler.rs
crates/game_client/src/logic/: mod.rs
crates/game_client/src/logic/entities/player/: game_mode_service.rs  init_service.rs  look_at_service.rs  mod.rs  water_hud_service.rs
crates/game_client/src/logic/events/: block_event_handler.rs  mod.rs
crates/game_client/src/logic/events/block_event_handler/: block_place_handler.rs  placement.rs  structure_materials.rs  structure_math.rs  structure_placement.rs  structure_runtime.rs
crates/game_client/src/logic/registry/: biome_registry.rs  block_registry.rs  mod.rs
crates/game_client/src/shader/: terrain_shader.rs  water_shader.rs
crates/game_client/src/states/: world_gen.rs
crates/game_server/: Cargo.toml
crates/game_server/src/: app.rs  bootstrap.rs  lib.rs  models.rs  state.rs  world_spawn.rs
crates/game_server/src/generator/chunk/: mod.rs
crates/game_server/src/generator/chunk/base/: chunk_builder_tail.rs  chunk_struct.rs  chunk_utils.rs  chunk_utils_io.rs  mod.rs
crates/game_server/src/generator/chunk/cave/: cave_utils.rs  mod.rs
crates/game_server/src/generator/chunk/fluid/: fluid_gen.rs
crates/game_server/src/generator/chunk/vegetation/: mod.rs  prop_gen.rs
crates/game_server/src/services/: chat.rs  connections.rs  gameplay.rs  mod.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/protocol/src/network/: mod.rs
crates/protocol/src/network/protocols/: auth.rs  blocks.rs  chat.rs  chests.rs  chunks.rs  drops.rs  items.rs  mobs.rs  mod.rs  player.rs  social.rs  world.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs  paths.rs
crates/shared/src/utils/: key_utils.rs  v_ram_utils.rs
multiplayer/: Cargo.toml
scripts/: release-client.sh  release-server.sh
server/: Cargo.toml
server/src/: bootstrap.rs  main.rs  models.rs  state.rs  types.rs
server/src/services/: chat.rs  connections.rs  gameplay.rs  mod.rs
src/: lib.rs  main.rs
(+288 files in other folders)
