[package]
name = "oplexa-game"
version = "0.1.0"
edition = "2024"
authors = ["Daniel Ramke <genshin.exepta@outlook.com>"]

[workspace]
members = ["api", "server"]

[[bin]]
name = "oplexa-game"
path = "src/main.rs"

[features]
default = []
vram_nvml  = ["api/vram_nvml"]
vram_dxgi  = ["api/vram_dxgi"]
vram_metal = ["api/vram_metal"]

[profile.release]
panic = "unwind"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
incremental = false

[profile.dev.package."*"]
opt-level = 3
debug = true

[dependencies.bevy]
version = "0.18.1"
default-features = false
features = [
    "bevy_asset",
    "bevy_state",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_gizmos_render",
    "bevy_log",
    "bevy_render",
    "bevy_window",
    "png",
    "bevy_text",
    "bevy_winit",
    "default_font",
    "multi_threaded",
    "x11",
    "wayland",
    "bevy_gltf",
    "bevy_pbr",
    "bevy_animation",
    "tonemapping_luts",
    "bevy_color",
    "bevy_ui",
    "jpeg",
    "zstd_rust"
]

[dependencies.bevy-inspector-egui]
version = "0.36.0"

[dependencies.bevy_rapier3d]
version = "0.33.0"
default-features = false
features = ["dim3"]

[dependencies.bevy_extended_ui]
version = "1.5.0"

[dependencies.tracing-subscriber]
version = "0.3.20"

[dependencies.chrono]
version = "0.4.42"
features = ["clock"]

[dependencies.dotenvy]
version = "0.15.7"

[dependencies.ctrlc]
version = "3.4.5"

[dependencies.sysinfo]
version = "0.38.4"

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.149"

[dependencies.rand]
version = "0.10.0"

[dependencies.toml]
version = "1.1.0"
features = [
    "parse",
    "display"
]

[dependencies.fastnoise-lite]
version = "1.1.1"

[dependencies.lz4_flex]
version = "0.13.0"

[dependencies.futures-lite]
version = "2.6.1"

[dependencies.wincode]
version = "0.5.0"

[dependencies]
api = { path = "api" }
lightyear = { version = "0.26.4", features = ["websocket", "netcode"] }

[target.'cfg(target_os = "macos")'.dependencies]
api = { path = "api", features = ["vram_metal"] }
