[workspace]
members = [
    "apps/client",
    "apps/server",
    "crates/api",
    "crates/core",
    "crates/game_client",
    "crates/game_server",
    "crates/protocol",
    "crates/shared",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Daniel Ramke <genshin.exepta@outlook.com>"]

[workspace.dependencies]
bevy = { version = "0.18.1", default-features = false }
bevy-inspector-egui = "0.36.0"
bevy_rapier3d = { version = "0.33.0", default-features = false }
bevy_extended_ui = "1.5.0"
chrono = "0.4.42"
ctrlc = "3.4.5"
dotenvy = "0.15.7"
fastnoise-lite = "1.1.1"
fluent-bundle = "0.16.0"
futures-lite = "2.6.1"
image = { version = "0.25.8", default-features = false }
lightyear = { version = "=0.26.4", default-features = false }
log = "0.4.28"
lz4_flex = "0.13.0"
metal = "0.33.0"
nvml-wrapper = "0.12.0"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.38.4"
toml = "1.1.0"
tracing-subscriber = "0.3.20"
unic-langid = "0.9.6"
windows = { version = "0.62.0", default-features = false }
wincode = "0.5.0"

[profile.release]
panic = "unwind"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
incremental = false

[profile.dev.package."*"]
opt-level = 3
debug = true
