[package]
name = "api"
version = "0.1.0"
edition = "2024"

[features]
default = []
vram_nvml = ["dep:nvml-wrapper"]
vram_dxgi = ["dep:windows"]
vram_metal = ["dep:metal"]

[dependencies.bevy]
version = "0.18.1"
default-features = false
features = [
    "bevy_asset",
    "bevy_state",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_log",
    "bevy_render",
    "bevy_window",
    "png",
    "bevy_text",
    "bevy_winit",
    "default_font",
    "multi_threaded",
    "x11",
    "wayland",
    "bevy_gltf",
    "bevy_pbr",
    "bevy_animation",
    "tonemapping_luts",
    "bevy_color",
    "bevy_ui",
    "jpeg",
    "zstd_rust"
]

[dependencies.bevy_rapier3d]
version = "0.33.0"
default-features = false
features = ["dim3"]

[dependencies]
wincode = "0.5.0"
fastnoise-lite = "1.1.1"
futures-lite = "2.6.1"
lz4_flex = "0.13.0"
lightyear = "0.26.4"
image = { version = "0.25.8", default-features = false, features = ["png"] }
nvml-wrapper = { version = "0.12.0", optional = true }
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.38.4"
toml = { version = "1.1.0", features = ["parse", "display"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.0", optional = true, features = [
    "Win32_Graphics_Dxgi", "Win32_Graphics_Dxgi_Common"
] }

[target.'cfg(target_os = "macos")'.dependencies]
metal = { version = "0.33.0", optional = true }
