[package]
name = "oplexa-game-server"
version = "0.1.0"
edition = "2024"

[dependencies.bevy]
version = "0.18.1"
default-features = false
features = ["multi_threaded", "bevy_log"]

[dependencies]
lightyear = { version = "0.26.4", features = ["websocket", "netcode"] }
futures-lite = "2.6.1"
log = "0.4.28"
api = { path = "../api" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.38.4"
